@@ -1,1 +1,1 @@
-ca_f90EXE_sources += probdata.f90
+ca_F90EXE_sources += probdata.F90
