@@ -132,6 +132,14 @@ extern "C"
 #endif
 #endif
 
+#ifdef AMREX_DIMENSION_AGNOSTIC
+#ifdef GPU_COMPATIBLE_INITIALIZATION
+  void ca_initdata(const int* lo, const int* hi,
+                   BL_FORT_FAB_ARG_3D(state),
+                   const amrex::Real* dx, const amrex::Real* problo);
+#endif
+#endif
+
   void ca_apply_metric
     (const int* lo, const int* hi,
      const int* xlo, const int* xhi,
@@ -499,12 +507,14 @@ extern "C"
 
 #ifdef AMREX_DIMENSION_AGNOSTIC
 
+#ifndef GPU_COMPATIBLE_INITIALIZATION
 BL_FORT_PROC_DECL(CA_INITDATA,ca_initdata)
     (const int& level, const amrex::Real& time,
      const int* lo, const int* hi,
      const int& num_state,
      BL_FORT_FAB_ARG_3D(state),
      const amrex::Real* dx, const amrex::Real* xlo, const amrex::Real* xhi);
+#endif
 
 #else
 
